@@ -1,3 +1,5 @@
+DIST qtemu-2.0alpha1.tar.bz2 874624 RMD160 bdff8fbaf3f25b7e6366bb9002286d6b58cd4365 SHA1 44f4405c13ee640699dc7b5a5fcdb2f42fbd0fe7 SHA256 8cae401ad3d9309bd2458ea3ddeb0235d9b44dfdc4b1c1770409372e2b9de272
+EBUILD qtemu-2.0_alpha1.ebuild 645 RMD160 b7083cd4774bd00c2920f152a09851b250217df6 SHA1 a60aac452e22b72729d0a5e41dcf18f908c46482 SHA256 bf1943ede829c3d1e9ed9a7dc685f740aae24eb83e6b50e5d3c9cad4d403028d
 EBUILD qtemu-9999.ebuild 627 RMD160 58c26928c9e708b09d46676fa5cbc4ac1c94a232 SHA1 3a37f937b7147e76154117ff3b2d54f90ad4fff4 SHA256 9d81ab236ff4b5eb6c679c95dfcaba0e8f38c3d7c7c48a3b650cf60aa4c6ee05
-MISC ChangeLog 980 RMD160 b900ef85d8b1aadb65f1106dcd29e2756bd8ff05 SHA1 56fccd466f2bceed12aa69ae256039298f719912 SHA256 6fe87413aec35b7df1ec5b0554a4b8df8474fe0289c03630f30a4310f9cd49ea
+MISC ChangeLog 1171 RMD160 1f197ac838326b318adf1705d8f366cd7b05edc0 SHA1 122f08452b801d39e3030a6fc6847613795012fa SHA256 1c184a9e101158890e5abe1ab285caf1c5a4fc715eae2ccb47fcdd2b9fa9d1ef
 MISC metadata.xml 292 RMD160 9be84139ad3493e9048fff8046813681173a6c3e SHA1 ee111498506e3a9ebcfeadb51519c15519729d28 SHA256 29dbee0b92e15d4cd7a89b8b9fdf0ce41af2f5e7b9f394c546ff61094816968a
