@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qtemu-2.0_alpha1 (24 Jul 2009)
+
+  24 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
+  +qtemu-2.0_alpha1.ebuild:
+  New ebuild for 2.0_alpha1. Thanks to Will Lepofsky for the initial ebuild
+
   12 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qtemu-9999.ebuild,
   metadata.xml:
   Update ebuild. Added kvm,qemu use flags
